{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 46,
  "lineage": "92ab6f4c-8726-0b3f-eb96-dcba367e35d9",
  "resources": [
    {
      "module": "module.elastic-ip",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06a223e00e21184a8",
            "domain": "vpc",
            "id": "eipalloc-06a223e00e21184a8",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-72-0-107.compute-1.amazonaws.com",
            "public_ip": "52.72.0.107",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip for nat",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "default",
              "Name": "eip for nat",
              "Owner": "Alphador",
              "Provisioned": "Terraform",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.internet-gateway.aws_internet_gateway.internet-gateway",
            "module.vpc-network.aws_vpc.vpc-network"
          ]
        }
      ]
    },
    {
      "module": "module.internet-gateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725547273:internet-gateway/igw-0fcb9f3ed224d48a5",
            "id": "igw-0fcb9f3ed224d48a5",
            "owner_id": "851725547273",
            "tags": {
              "Name": "internet-gateway",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "default",
              "Name": "internet-gateway",
              "Owner": "Alphador",
              "Provisioned": "Terraform",
              "Terraform": "true"
            },
            "vpc_id": "vpc-017045120d88df28a"
          },
          "dependencies": [
            "module.vpc-network.aws_vpc.vpc-network"
          ]
        }
      ]
    },
    {
      "module": "module.nat-gateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06a223e00e21184a8",
            "association_id": "eipassoc-01e7625e70a2e9f6c",
            "connectivity_type": "public",
            "id": "nat-045f5387de929c27f",
            "network_interface_id": "eni-0cc12f5a64ac1f5dc",
            "private_ip": "10.0.1.192",
            "public_ip": "52.72.0.107",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01c5bb3533fe39017",
            "tags": {
              "Name": "nat-gateway",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "default",
              "Name": "nat-gateway",
              "Owner": "Alphador",
              "Provisioned": "Terraform",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.elastic-ip.aws_eip.eip_nat_gateway",
            "module.internet-gateway.aws_internet_gateway.internet-gateway",
            "module.subnets.aws_subnet.public-subnet",
            "module.subnets.data.aws_availability_zones.az",
            "module.vpc-network.aws_vpc.vpc-network"
          ]
        }
      ]
    },
    {
      "module": "module.route-table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725547273:route-table/rtb-038cab52c593d9dda",
            "id": "rtb-038cab52c593d9dda",
            "owner_id": "851725547273",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-045f5387de929c27f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route-gateway",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "default",
              "Name": "route-gateway",
              "Owner": "Alphador",
              "Provisioned": "Terraform",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-017045120d88df28a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.elastic-ip.aws_eip.eip_nat_gateway",
            "module.internet-gateway.aws_internet_gateway.internet-gateway",
            "module.nat-gateway.aws_nat_gateway.nat-gateway",
            "module.subnets.aws_subnet.public-subnet",
            "module.subnets.data.aws_availability_zones.az",
            "module.vpc-network.aws_vpc.vpc-network"
          ]
        }
      ]
    },
    {
      "module": "module.route-table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725547273:route-table/rtb-0aeb8ff7499c0f37d",
            "id": "rtb-0aeb8ff7499c0f37d",
            "owner_id": "851725547273",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fcb9f3ed224d48a5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route-gateway",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "default",
              "Name": "route-gateway",
              "Owner": "Alphador",
              "Provisioned": "Terraform",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-017045120d88df28a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.internet-gateway.aws_internet_gateway.internet-gateway",
            "module.vpc-network.aws_vpc.vpc-network"
          ]
        }
      ]
    },
    {
      "module": "module.route-table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-020ae61e46ca3e58d",
            "route_table_id": "rtb-0aeb8ff7499c0f37d",
            "subnet_id": "subnet-01c5bb3533fe39017"
          },
          "dependencies": [
            "module.internet-gateway.aws_internet_gateway.internet-gateway",
            "module.route-table.aws_route_table.public-route-table",
            "module.subnets.aws_subnet.public-subnet",
            "module.subnets.data.aws_availability_zones.az",
            "module.vpc-network.aws_vpc.vpc-network"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private_subnet_1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725547273:subnet/subnet-087bddcb7a391ca8d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-087bddcb7a391ca8d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725547273",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_1",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "default",
              "Name": "private_subnet_1",
              "Owner": "Alphador",
              "Provisioned": "Terraform",
              "Terraform": "true"
            },
            "vpc_id": "vpc-017045120d88df28a"
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.az",
            "module.vpc-network.aws_vpc.vpc-network"
          ]
        },
        {
          "index_key": "private_subnet_2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725547273:subnet/subnet-05f2bad73f09ed2fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05f2bad73f09ed2fe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725547273",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_2",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "default",
              "Name": "private_subnet_2",
              "Owner": "Alphador",
              "Provisioned": "Terraform",
              "Terraform": "true"
            },
            "vpc_id": "vpc-017045120d88df28a"
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.az",
            "module.vpc-network.aws_vpc.vpc-network"
          ]
        },
        {
          "index_key": "private_subnet_3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725547273:subnet/subnet-062940f15b2a243d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-062940f15b2a243d5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725547273",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_3",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "default",
              "Name": "private_subnet_3",
              "Owner": "Alphador",
              "Provisioned": "Terraform",
              "Terraform": "true"
            },
            "vpc_id": "vpc-017045120d88df28a"
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.az",
            "module.vpc-network.aws_vpc.vpc-network"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public_subnet_1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725547273:subnet/subnet-01c5bb3533fe39017",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01c5bb3533fe39017",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "851725547273",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_1",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "default",
              "Name": "public_subnet_1",
              "Owner": "Alphador",
              "Provisioned": "Terraform",
              "Terraform": "true"
            },
            "vpc_id": "vpc-017045120d88df28a"
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.az",
            "module.vpc-network.aws_vpc.vpc-network"
          ]
        },
        {
          "index_key": "public_subnet_2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725547273:subnet/subnet-07a4876af44d263df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a4876af44d263df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "851725547273",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_2",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "default",
              "Name": "public_subnet_2",
              "Owner": "Alphador",
              "Provisioned": "Terraform",
              "Terraform": "true"
            },
            "vpc_id": "vpc-017045120d88df28a"
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.az",
            "module.vpc-network.aws_vpc.vpc-network"
          ]
        },
        {
          "index_key": "public_subnet_3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725547273:subnet/subnet-09d3bbebb3488588d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09d3bbebb3488588d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "851725547273",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_3",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "default",
              "Name": "public_subnet_3",
              "Owner": "Alphador",
              "Provisioned": "Terraform",
              "Terraform": "true"
            },
            "vpc_id": "vpc-017045120d88df28a"
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.az",
            "module.vpc-network.aws_vpc.vpc-network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-network",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725547273:vpc/vpc-017045120d88df28a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02891a7c3a4e3ff07",
            "default_route_table_id": "rtb-00ecc63562aecf060",
            "default_security_group_id": "sg-0eed8f35d6771fcec",
            "dhcp_options_id": "dopt-0eaeb095aea7abb3c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-017045120d88df28a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00ecc63562aecf060",
            "owner_id": "851725547273",
            "tags": {
              "Name": "vpc-network",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "default",
              "Name": "vpc-network",
              "Owner": "Alphador",
              "Provisioned": "Terraform",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}